# news_elastic_ingest

./: .gitignore  MANIFEST.in  README.md  setup.cfg
news_elasic_ingest/: __init__.py  types.py
news_elastic_ingest/: __init__.py  __main__.py
