[metadata]
name = news_elastic_ingest
version = file: news_elasic_ingest/_version.txt
author = Ashutosh Varma
author-email = ashutoshvarma11@live.com
description = Helper functions for uploading document to elasticsearch for NewzWarrior
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages =
    news_elastic_ingest
setup_requires =
    setuptools >=38.3.0         # version with most `setup.cfg` bugfixes
install_requires =
    elasticsearch==7.9.1
    elasticsearch-dsl==7.3.0

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, .venv

